# mcp-oauth-gateway

./: .env.example  .gitignore  CHANGELOG.md  Caddyfile  Dockerfile  NOTES.md  OAUTH_VERIFICATION.md  README.md  TODO.md  deploy-gateway.sh  entrypoint.sh  gateway-test.json  gateway.py  pyproject.toml  run.sh  servers.json  test-local.sh
static/: index.html  privacy.html  terms.html
